--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "commonjs",
     "sourceMap": true,
     "rootDir": "src",
+    "noImplicitAny": false,
     "outDir": "dist",
     "lib": ["esnext"]
   }
