--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "npm-run-all": "4.1.3",
     "prisma": "1.10.2",
     "rimraf": "2.6.2",
+    "ts-graphql-plugin": "^1.1.2",
     "ts-node": "6.2.0",
     "tslint": "^5.10.0",
     "tslint-config-standard": "^7.1.0",
