--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -1,12 +1,11 @@
-version: '3'
+version: "3"
 
 services:
-
   prisma:
-    image: prismagraphql/prisma:1.8
+    image: prismagraphql/prisma:1.21
     restart: always
     ports:
-    - "4466:4466"
+      - "4466:4466"
     environment:
       PRISMA_CONFIG: |
         port: 4466
