✉️ add email service

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 PRISMA_ENDPOINT=http://localhost:4466
 PRISMA_SECRET=prismasecret
+FRONTEND_HOST=http://localhost:4444
 APP_SECRET=mysecret
+SENDGRID_API_KEY=mysecretkey
