--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "tslint -c tslint.json -p tsconfig.json"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "bcryptjs": "2.4.3",
     "graphql-binding": "^2.3.5",
     "graphql-yoga": "1.16.7",
