--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
-dist
-package-lock.json
-node_modules
-.idea
 .vscode
-*.log
-.env*
+
+# dependencies
+node_modules/
+
+# testing
+coverage/
+
+# production
+build/
+dist/
+.next
+
+# misc
+.DS_Store
+.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
