--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,14 +6,16 @@
   "author": "Bruno Ukita <brunoukita@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "next",
+    "dev": "next -p 4444",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "next": "^7.0.2",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "styled-components": "^4.1.2"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
