--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.0",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
