--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,9 +8,7 @@
     "rootDir": "src",
     "noImplicitAny": false,
     "outDir": "dist",
-    "plugins": [
-      { "name": "ts-graphql-plugin" }
-    ],
+    "plugins": [{ "name": "ts-graphql-plugin" }],
     "lib": ["esnext"]
   }
 }
