--- a/backend/.graphqlconfig.yml
+++ b/backend/.graphqlconfig.yml
@@ -1,15 +1,10 @@
 projects:
   app:
-    schemaPath: src/schema.graphql
+    schemaPath: "src/schema.graphql"
     extensions:
       endpoints:
-        default: http://localhost:4000
-  database:
-    schemaPath: src/generated/prisma.graphql
+        default: "http://localhost:4444"
+  prisma:
+    schemaPath: "src/generated/prisma.graphql"
     extensions:
-      prisma: database/prisma.yml
-      codegen:
-        - generator: prisma-binding
-          language: typescript
-          output:
-            binding: src/generated/prisma.ts
+      prisma: prisma/prisma.yml
