--- a/backend/prisma/docker-compose.yml
+++ b/backend/prisma/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   prisma:
-    image: prismagraphql/prisma:1.21
+    image: prismagraphql/prisma:1.32
     ports:
       - "4466:4466"
     environment:
@@ -14,13 +14,14 @@ services:
           default:
             connector: postgres
             host: postgres
-            port: 5432
             user: prisma
             password: prisma
-            migrations: true
+            # rawAccess: true
+            port: 5432
+            # migrations: true
 
   postgres:
-    image: postgres:10-alpine
+    image: postgres
     environment:
       POSTGRES_USER: prisma
       POSTGRES_PASSWORD: prisma
