--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
     "bcryptjs": "2.4.3",
+    "graphql-shield": "^5.3.4",
     "graphql-yoga": "1.17.4",
     "jsonwebtoken": "8.5.1",
     "prisma-client-lib": "^1.32.0"
