--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@svgr/webpack": "^4.2.0",
+    "apollo-boost": "^0.3.1",
+    "graphql": "^14.3.0",
     "next": "^8.1.0",
+    "next-with-apollo": "^3.4.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-apollo": "^2.5.5",
     "react-dom": "^16.8.6",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.0",
+    "dotenv-webpack": "^1.7.0",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
