--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,14 @@
   "author": "Bruno Ukita <brunoukita@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "next -p 4444",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@svgr/webpack": "^4.2.0",
     "apollo-boost": "^0.3.1",
+    "express": "^4.17.0",
     "graphql": "^14.3.0",
     "next": "^8.1.0",
     "next-with-apollo": "^3.4.0",
