--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -28,5 +28,16 @@ services:
     volumes:
       - postgres:/var/lib/postgresql/data
 
+  web:
+    build: .
+    env_file: .env
+    command: "yarn start"
+    volumes:
+      - .:/app
+    ports:
+      - "4000:4000"
+    depends_on:
+      - prisma
+
 volumes:
   postgres:
