--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "plugins": ["jsx-a11y"],
+  "plugins": ["jsx-a11y", "react-hooks"],
   "extends": ["standard", "standard-react", "plugin:jsx-a11y/recommended"],
   "rules": {
     "jsx-a11y/anchor-is-valid": [
@@ -7,6 +7,8 @@
       {
         "aspects": ["invalidHref", "preferButton"]
       }
-    ]
+    ],
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
