use ncc to bundle backend project

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,13 +2,7 @@ FROM node:12-alpine
 
 WORKDIR /app
 
-COPY package.json yarn.lock ./
-
-RUN yarn --prod
-
-COPY dist ./src
-COPY src/schema.graphql ./src
-COPY src/generated/prisma.graphql ./src/generated
+COPY build ./src
 
 EXPOSE 4000
 
