--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -1,6 +1,11 @@
 {
   "plugins": ["jsx-a11y", "react-hooks"],
-  "extends": ["standard", "standard-react", "plugin:jsx-a11y/recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended",
+    "plugin:jsx-a11y/recommended"
+  ],
   "rules": {
     "jsx-a11y/anchor-is-valid": [
       "error",
@@ -10,5 +15,14 @@
     ],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
+  },
+  "parserOptions": {
+    "ecmaVersion": 2019,
+    "sourceType": "module"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
