--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@svgr/webpack": "^4.2.0",
     "apollo-boost": "^0.3.1",
     "express": "^4.17.0",
+    "focus-visible": "^4.1.5",
     "graphql": "^14.3.0",
     "next": "^8.1.0",
     "next-with-apollo": "^3.4.0",
