--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "parser": "babel-eslint",
   "plugins": ["jsx-a11y", "react-hooks"],
   "extends": [
     "eslint:recommended",
@@ -17,7 +18,7 @@
     "react-hooks/exhaustive-deps": "warn"
   },
   "parserOptions": {
-    "ecmaVersion": 2019,
+    "ecmaVersion": 10,
     "sourceType": "module"
   },
   "settings": {
