--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@storybook/addon-storysource": "^5.1.7",
     "@storybook/addons": "^5.1.7",
     "@storybook/react": "^5.1.7",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.0",
     "docz": "^1.2.0",
