--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "react": "^16.8.6",
     "react-apollo": "^2.5.6",
     "react-dom": "^16.8.6",
-    "styled-components": "^4.3.1",
+    "styled-components": "^5.0.0-beta.0",
     "styled-system": "^5.0.6"
   },
   "devDependencies": {
