--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,12 @@
     "@styled-system/theme-get": "^5.0.6",
     "@svgr/webpack": "^4.3.0",
     "apollo-boost": "^0.4.2",
-    "express": "^4.17.1",
     "focus-visible": "^5.0.0",
     "graphql": "^14.3.1",
     "next": "^8.1.0",
     "next-with-apollo": "^3.4.0",
     "nprogress": "^0.2.0",
+    "polka": "^0.5.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-apollo": "^2.5.6",
