--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,33 +10,52 @@
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "lint": "eslint **/*.{js,jsx}",
-    "prettier": "prettier --write **/*.{js,jsx}"
+    "prettier": "prettier --write **/*.{js,jsx}",
+    "storybook": "start-storybook -c docs/.storybook -p 6006",
+    "build-storybook": "build-storybook -c docs/.storybook"
   },
   "dependencies": {
-    "@svgr/webpack": "^4.2.0",
-    "apollo-boost": "^0.3.1",
-    "express": "^4.17.0",
-    "graphql": "^14.3.0",
+    "@styled-system/prop-types": "^5.0.8",
+    "@styled-system/theme-get": "^5.0.6",
+    "@svgr/webpack": "^4.3.0",
+    "apollo-boost": "^0.4.2",
+    "focus-visible": "^5.0.0",
+    "graphql": "^14.3.1",
     "next": "^8.1.0",
     "next-with-apollo": "^3.4.0",
+    "nprogress": "^0.2.0",
+    "polka": "^0.5.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.5",
+    "react-apollo": "^2.5.6",
     "react-dom": "^16.8.6",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.3.1",
+    "styled-system": "^5.0.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@storybook/addon-actions": "^5.1.7",
+    "@storybook/addon-info": "^5.1.7",
+    "@storybook/addon-knobs": "^5.1.7",
+    "@storybook/addon-links": "^5.1.7",
+    "@storybook/addon-storysource": "^5.1.7",
+    "@storybook/addons": "^5.1.7",
+    "@storybook/react": "^5.1.7",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.0",
+    "docz": "^1.2.0",
+    "docz-theme-default": "^1.2.0",
     "dotenv-webpack": "^1.7.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "^1.6.0",
     "eslint-plugin-standard": "^4.0.0",
-    "prettier": "^1.17.1"
+    "prettier": "^1.18.2"
   }
 }
