--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "focus-visible": "^5.0.0",
     "graphql": "^14.3.1",
     "next": "^8.1.0",
+    "next-cookies": "^1.1.2",
     "next-with-apollo": "^3.4.0",
     "nprogress": "^0.2.0",
     "polka": "^0.5.2",
