--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react": "^16.8.6",
     "react-apollo": "^2.5.6",
     "react-dom": "^16.8.6",
+    "react-feather": "^1.1.6",
     "styled-components": "^4.3.1",
     "styled-system": "^5.0.6"
   },
