--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -1,5 +1,8 @@
 {
   "parser": "babel-eslint",
+  "env": {
+    "browser": true
+  },
   "plugins": ["jsx-a11y", "react-hooks"],
   "extends": [
     "eslint:recommended",
