--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,8 @@
     "react-apollo": "^2.5.6",
     "react-dom": "^16.8.6",
     "react-feather": "^1.1.6",
+    "react-focus-lock": "^2.0.0",
+    "react-spring": "^8.0.25",
     "styled-components": "^4.3.1",
     "styled-system": "^5.0.6"
   },
