--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,7 @@
     "react-feather": "^1.1.6",
     "react-focus-lock": "^2.0.0",
     "react-spring": "^8.0.25",
-    "styled-components": "^4.3.1",
+    "styled-components": "^5.0.0-beta.6",
     "styled-system": "^5.0.6"
   },
   "devDependencies": {
@@ -53,7 +53,7 @@
     "docz": "^1.2.0",
     "docz-theme-default": "^1.2.0",
     "dotenv-webpack": "^1.7.0",
-    "eslint": "^5.16.0",
+    "eslint": "^6.0.1",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-node": "^9.1.0",
