--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -24,5 +24,10 @@
   "parserOptions": {
     "ecmaVersion": 10,
     "sourceType": "module"
+  },
+  "settings": {
+    "react": {
+      "version": "16"
+    }
   }
 }
