--- a/backend/.graphqlconfig.yml
+++ b/backend/.graphqlconfig.yml
@@ -3,7 +3,7 @@ projects:
     schemaPath: "src/schema.graphql"
     extensions:
       endpoints:
-        default: "http://localhost:4444"
+        dinero: "http://localhost:4444"
   prisma:
     schemaPath: "src/generated/prisma.graphql"
     extensions:
