--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@sendgrid/mail": "^6.3.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
+    "dayjs": "^1.8.14",
     "graphql-shield": "^5.3.4",
     "graphql-yoga": "^1.17.4",
     "jsonwebtoken": "^8.5.1",
