--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -1,5 +1,9 @@
 {
   "parser": "babel-eslint",
+  "env": {
+    "browser": true,
+    "node": true
+  },
   "plugins": ["jsx-a11y", "react-hooks"],
   "extends": [
     "eslint:recommended",
@@ -23,7 +27,7 @@
   },
   "settings": {
     "react": {
-      "version": "detect"
+      "version": "16"
     }
   }
 }
