--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,10 @@
     "start": "NODE_ENV=production node server.js",
     "lint": "eslint **/*.{js,jsx}",
     "prettier": "prettier --write **/*.{js,jsx}",
-    "storybook": "start-storybook -c docs/.storybook -p 6006",
-    "build-storybook": "build-storybook -c docs/.storybook",
     "analyze": "ANALYZE=true yarn build"
   },
   "dependencies": {
+    "@data-ui/sparkline": "^0.0.79",
     "@next/bundle-analyzer": "^8.1.0",
     "@styled-system/prop-types": "^5.0.8",
     "@styled-system/theme-get": "^5.0.6",
@@ -24,6 +23,7 @@
     "focus-visible": "^5.0.0",
     "graphql": "^14.3.1",
     "next": "^8.1.0",
+    "next-cookies": "^1.1.2",
     "next-with-apollo": "^3.4.0",
     "nprogress": "^0.2.0",
     "polka": "^0.5.2",
@@ -31,23 +31,17 @@
     "react": "^16.8.6",
     "react-apollo": "^2.5.6",
     "react-dom": "^16.8.6",
-    "styled-components": "^4.3.1",
+    "react-feather": "^1.1.6",
+    "react-focus-lock": "^2.0.0",
+    "react-spring": "^8.0.25",
+    "styled-components": "4.3.2",
     "styled-system": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
-    "@storybook/addon-actions": "^5.1.7",
-    "@storybook/addon-info": "^5.1.7",
-    "@storybook/addon-knobs": "^5.1.7",
-    "@storybook/addon-links": "^5.1.7",
-    "@storybook/addon-storysource": "^5.1.7",
-    "@storybook/addons": "^5.1.7",
-    "@storybook/react": "^5.1.7",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
-    "babel-plugin-styled-components": "^1.10.0",
-    "docz": "^1.2.0",
-    "docz-theme-default": "^1.2.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "dotenv-webpack": "^1.7.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
@@ -55,7 +49,7 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-hooks": "^1.6.0",
     "eslint-plugin-standard": "^4.0.0",
     "prettier": "^1.18.2"
